// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create_schema.sql > line 12 1`] = `
[
  "CREATE SCHEMA AUTHORIZATION regress_create_schema_role
  CREATE SEQUENCE schema_not_existing.seq",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "authrole": {
              "location": 28,
              "rolename": "regress_create_schema_role",
              "roletype": "ROLESPEC_CSTRING",
            },
            "schemaElts": [
              {
                "CreateSeqStmt": {
                  "sequence": {
                    "inh": true,
                    "location": 73,
                    "relname": "seq",
                    "relpersistence": "p",
                    "schemaname": "schema_not_existing",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 15 1`] = `
[
  "  CREATE TABLE schema_not_existing.tab (id int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 15,
              "relname": "tab",
              "relpersistence": "p",
              "schemaname": "schema_not_existing",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 40,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 17 1`] = `
[
  "  CREATE VIEW schema_not_existing.view AS SELECT 1",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 49,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 14,
              "relname": "view",
              "relpersistence": "p",
              "schemaname": "schema_not_existing",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 19 1`] = `
[
  "  CREATE INDEX ON schema_not_existing.tab (id)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "id",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "tab",
              "relpersistence": "p",
              "schemaname": "schema_not_existing",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 21 1`] = `
[
  "  CREATE TRIGGER schema_trig BEFORE INSERT ON schema_not_existing.tab
  EXECUTE FUNCTION schema_trig.no_func()",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTrigStmt": {
            "events": 4,
            "funcname": [
              {
                "String": {
                  "sval": "schema_trig",
                },
              },
              {
                "String": {
                  "sval": "no_func",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 46,
              "relname": "tab",
              "relpersistence": "p",
              "schemaname": "schema_not_existing",
            },
            "timing": 2,
            "trigname": "schema_trig",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 24 1`] = `
[
  "SET ROLE regress_create_schema_role",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 9,
                  "sval": {
                    "sval": "regress_create_schema_role",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 26 1`] = `
[
  "  CREATE SEQUENCE schema_not_existing.seq",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSeqStmt": {
            "sequence": {
              "inh": true,
              "location": 18,
              "relname": "seq",
              "relpersistence": "p",
              "schemaname": "schema_not_existing",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 37 1`] = `
[
  "CREATE SCHEMA regress_schema_1 AUTHORIZATION CURRENT_ROLE
  CREATE SEQUENCE schema_not_existing.seq",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "authrole": {
              "location": 45,
              "roletype": "ROLESPEC_CURRENT_ROLE",
            },
            "schemaElts": [
              {
                "CreateSeqStmt": {
                  "sequence": {
                    "inh": true,
                    "location": 76,
                    "relname": "seq",
                    "relpersistence": "p",
                    "schemaname": "schema_not_existing",
                  },
                },
              },
            ],
            "schemaname": "regress_schema_1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 52 1`] = `
[
  "CREATE SCHEMA AUTHORIZATION regress_create_schema_role
  CREATE TABLE regress_create_schema_role.tab (id int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "authrole": {
              "location": 28,
              "rolename": "regress_create_schema_role",
              "roletype": "ROLESPEC_CSTRING",
            },
            "schemaElts": [
              {
                "CreateStmt": {
                  "oncommit": "ONCOMMIT_NOOP",
                  "relation": {
                    "inh": true,
                    "location": 70,
                    "relname": "tab",
                    "relpersistence": "p",
                    "schemaname": "regress_create_schema_role",
                  },
                  "tableElts": [
                    {
                      "ColumnDef": {
                        "colname": "id",
                        "is_local": true,
                        "location": 102,
                        "typeName": {
                          "location": 105,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 55 1`] = `
[
  "DROP SCHEMA regress_create_schema_role CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "String": {
                  "sval": "regress_create_schema_role",
                },
              },
            ],
            "removeType": "OBJECT_SCHEMA",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 59 1`] = `
[
  "  CREATE TABLE regress_create_schema_role.tab (id int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 15,
              "relname": "tab",
              "relpersistence": "p",
              "schemaname": "regress_create_schema_role",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 47,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 63 1`] = `
[
  "CREATE SCHEMA regress_schema_1 AUTHORIZATION CURRENT_ROLE
  CREATE TABLE regress_schema_1.tab (id int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "authrole": {
              "location": 45,
              "roletype": "ROLESPEC_CURRENT_ROLE",
            },
            "schemaElts": [
              {
                "CreateStmt": {
                  "oncommit": "ONCOMMIT_NOOP",
                  "relation": {
                    "inh": true,
                    "location": 73,
                    "relname": "tab",
                    "relpersistence": "p",
                    "schemaname": "regress_schema_1",
                  },
                  "tableElts": [
                    {
                      "ColumnDef": {
                        "colname": "id",
                        "is_local": true,
                        "location": 95,
                        "typeName": {
                          "location": 98,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  ],
                },
              },
            ],
            "schemaname": "regress_schema_1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 66 1`] = `
[
  "DROP SCHEMA regress_schema_1 CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_CASCADE",
            "objects": [
              {
                "String": {
                  "sval": "regress_schema_1",
                },
              },
            ],
            "removeType": "OBJECT_SCHEMA",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_schema.sql > line 70 1`] = `
[
  "DROP ROLE regress_create_schema_role",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_create_schema_role",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
